# chaiverse

./: .gitignore  LICENSE.md  MANIFEST.in  Quickstart.ipynb  README.md  hatch.toml  hatch_build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
chaiverse/tests/: test_discord_bot_end_to_end.py
guanaco_python_package/: MANIFEST.in  README.md  requirements.txt  setup.py
guanaco_python_package/resources/: README.md  guanaco_quickstart.ipynb
guanaco_python_package/tests/: test_chat.py  test_feedback.py  test_guanaco_python_utils.py  test_metrics.py  test_private.py  test_submit.py
resources/: guanaco_quickstart.ipynb
runpod/: Dockerfile  start.sh  upload_image.sh
src/chai_guanaco/: __init__.py  formatters.py  login_cli.py  metrics.py  submit.py  utils.py
src/chai_guanaco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/chaiverse/: MANIFEST.in  __init__.py  chat.py  competition.py  config.py  constants.py  core.py  dataset.py  feedback.py  formatters.py  http_client.py  logging_utils.py  login_cli.py  metrics.py  requirements.txt  setup.deprecated.py  setup.py  submit.py  test_requirements.txt  tokenizer.py  trainer.py  utils.py
src/chaiverse/dev/: dataset.py  (+2 more)
src/discord_bot/: config.py  discord_bot_client.py  main.py  requirements.txt
tests/: conftest.py  run_end_to_end_test.py  test_logging_utils.py  test_lora_models.py  test_utils.py
tests/data_processors/: test_chaiml_processor.py
tests/helpers/: api.py
tests/test_chai_guanaco/: test_chat.py  test_login.py  test_login_cli.py  test_metrics.py
(+153 files in other folders)
